<resources>
    <string name="app_name">Tardigrade Adventure</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scoresTitleText">High Scores</string>
    <string name="titleText">Welcome to Tardigrade Adventure</string>
    <string name="WelcomeText">Your aim is to control Tony the Tardigrade and help him forage enough food before he is
        forced into metabolic stasis for the next 30 years by scientists looking to investigate
        Tardigrade resilience.\n\nYou have 60 seconds to gather as much food as possible before the
        scientist put you to sleep, be aware of the Tardigrade’s natural predators that are hunting
        him as well.\n\nHere is a list of predators and prey to look out for:</string>
    <string name="predatorsText">Predators</string>
    <string name="preyTitle">Prey:</string>
    <string name="start_gamebtn">Start Game</string>
    <string name="high_scores_btn_text">High Scores</string>
    <string name="amebdesc">The Amoeba\nThis is a unicellular organism that has the ability to alter it’s shape by the extension and retraction of its pseudopods. These are natural the tardigrade’s natural predators.</string>
    <string name="nematodeDescription">The Nematode\nThis roundworm belonging to the family of parasitic worms known as helminths which inhabit a wide range of environments. These predators hunt the tardigrade at night.</string>
    <string name="algaeDescription">Bioluminescent Algae\nThis algae known as Noctiluca, a small single celled animal (dinoflagellate) lives in many waters of the world. These only come out in the dark and are very nutritious to the tardigrade.</string>
    <string name="bacteriaDescription">Bacteria\nThis salmonella bacteria from the family Enterobacteriaceae, is a single celled bacterium are numerous and although dangerous to humans, are a common source of food for the tardigrade.</string>
    <string name="plantDescription">Plant Cells\nTardigrades often feast on the cells of plants, the pierce the cell walls with its stylets and suck out the nutrients.</string>
    <string name="amoebaimage">Picture of an amoeba</string>
    <string name="picture_of_nematode">Picture of nematode</string>
    <string name="picture_of_fluorescent_algae">Picture of fluorescent algae</string>
    <string name="picture_of_bacteria">Picture of bacteria</string>
    <string name="picture_of_plant_cell">Picture of plant cell</string>
    <string name="userScoreText">Your Score:</string>
    <string name="enterDetailsText">Thank you for playing, please enter your details below to submit your high score to the leaderboard</string>
    <string name="photoText">Please click the button below to take your photo for the leaderboard, if you do not wish to submit a photo we will assign you a default image</string>
    <string name="takePhotoBtn">Take Photo</string>
    <string name="enterNameText">Please enter your name below:</string>
    <string name="user_picture_desc">User Picture</string>
    <string name="your_name_hint">your name</string>
    <string name="controlsbtn">Controls</string>
    <string name="controlTxt1">Hold the devide flat and move the player character by tilting the device. Collide with prey to score points and lose life if you collide with an enemy.\n\nHigher value prey appear if you play in the dark (or cover the device light sensor) but this brings out the more dangerous enemies. Going back into the light will bring back the weaker enemies and lower value prey.</string>
    <string name="controlTitleTxt">Controls</string>
    <string name="flatText">Start with the phone in the flat position</string>
    <string name="bkText">To move down the screen, tilt the device towards you.</string>
    <string name="fwdText">To move up the screen, tilt the device away from you.</string>
    <string name="lText">To move left, tilt the device left.</string>
    <string name="rText">To move right, tilt the device right.</string>
    <string name="phone_lying_flat">phone lying flat</string>
    <string name="phone_tilted">phone tilted</string>
    <string name="tardigrade_image">tardigrade image</string>
    <string name="player_name">Player Name:</string>
    <string name="score">Score:</string>
    <string name="user_image">user image</string>
    <string name="game_title">Game Title - Tardigrade Adventure</string>
    <string name="restart_game">Restart Game</string>
    <string name="dark_mode_button">Dark Mode</string>
    <string name="secondsText">seconds</string>
    <string name="time_remainingText">Time Remaining:</string>

</resources>