<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/app_background"
    tools:context=".InstructionFragment">

    <ScrollView
        android:id="@+id/instructionScrollView"
        android:layout_width="407dp"
        android:layout_height="441dp"
        android:background="?attr/text_background"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/darkModeView">

        <LinearLayout
            android:id="@+id/instructionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/titleText"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/WelcomeText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/predatorTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:text="@string/predatorsText"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/amoebaImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/amoebaimage"
                    android:src="@drawable/amoeba" />

                <TextView
                    android:id="@+id/amoebadescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:text="@string/amebdesc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/nematodeImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/picture_of_nematode"
                    android:src="@drawable/nematode"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/nematodeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:text="@string/nematodeDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/preyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preyTitle"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/algaeImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/picture_of_fluorescent_algae"
                    android:src="@drawable/algae" />

                <TextView
                    android:id="@+id/algaeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:text="@string/algaeDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/bactImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/picture_of_bacteria"
                    android:src="@drawable/bacteria" />

                <TextView
                    android:id="@+id/bacteriaDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:text="@string/bacteriaDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/plantcellImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/picture_of_plant_cell"
                    android:src="@drawable/plantcell" />

                <TextView
                    android:id="@+id/plantDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:text="@string/plantDescription" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionScrollView">

        <Button
            android:id="@+id/highScoresButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/high_scores_btn_text" />

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/start_gamebtn" />

    </LinearLayout>

    <Button
        android:id="@+id/controlBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:text="@string/controlsbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Switch
        android:id="@+id/darkModeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/text_background"
        android:minHeight="48dp"
        android:paddingHorizontal="5dp"
        android:text="@string/dark_mode_button"
        app:layout_constraintBottom_toTopOf="@id/instructionScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>