<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/app_background"
    tools:context=".UserScoreFragment">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/text_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="7dp"
        android:paddingVertical="7dp"
        app:layout_constraintBottom_toTopOf="@+id/takePhotoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/enterDetailsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterDetailsText"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/user_picture_desc"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/photoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photoText"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/viewHighScoresBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/high_scores_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/takePhotoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/takePhotoBtn"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/text_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePhotoBtn">

        <TextView
            android:id="@+id/userScoreText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/userScoreText"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/latestScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:textSize="34sp"
            tools:text="Score" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/text_background"
        android:orientation="vertical"
        android:paddingVertical="7dp"
        app:layout_constraintBottom_toTopOf="@+id/viewHighScoresBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/enterNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterNameText"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="60dp"
            android:ems="10"
            android:hint="@string/your_name_hint"
            android:inputType="textPersonName" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>