<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scoreItemView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/myCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playerImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/user_image"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/cardLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/player_name"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/scoreTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/score"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/scoreText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>